--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/levelUpConstraint"
+        android:id="@id/levelUpConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/levelUpText"
+            android:id="@id/levelUpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -26,18 +26,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/levelUpOk"
+            android:id="@id/levelUpOk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="OK"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/levelUpText" />
+            app:layout_constraintTop_toBottomOf="@id/levelUpText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/deathConstraint"
+        android:id="@id/deathConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/restartButton"
+            android:id="@id/restartButton"
             android:layout_width="288dp"
             android:layout_height="147dp"
             android:layout_marginTop="100dp"
@@ -59,7 +59,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/deathText"
+            android:id="@id/deathText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="100dp"
@@ -70,11 +70,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/restartButton" />
+            app:layout_constraintTop_toBottomOf="@id/restartButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/exploreConstraint"
+        android:id="@id/exploreConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,18 +84,18 @@
         app:layout_constraintVertical_bias="1.0">
 
         <Button
-            android:id="@+id/inventoryButton"
+            android:id="@id/inventoryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="32dp"
             android:text="I"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/characterButton"
+            app:layout_constraintBottom_toTopOf="@id/characterButton"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/characterButton"
+            android:id="@id/characterButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -106,7 +106,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/nameField"
+            android:id="@id/nameField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -114,12 +114,12 @@
             android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/mapLayout"
+            app:layout_constraintBottom_toTopOf="@id/mapLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/levelField"
+            android:id="@id/levelField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -128,12 +128,12 @@
             android:text="TextView"
             android:textAlignment="textEnd"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/mapLayout"
+            app:layout_constraintBottom_toTopOf="@id/mapLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
-            android:id="@+id/combatLog"
+            android:id="@id/combatLog"
             android:layout_width="266dp"
             android:layout_height="215dp"
             android:layout_marginStart="8dp"
@@ -141,12 +141,12 @@
             android:layout_marginEnd="16dp"
             android:gravity="bottom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/mapLayout"
-            app:layout_constraintTop_toBottomOf="@+id/levelField"
+            app:layout_constraintStart_toEndOf="@id/mapLayout"
+            app:layout_constraintTop_toBottomOf="@id/levelField"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <LinearLayout
-            android:id="@+id/hpLayout"
+            android:id="@id/hpLayout"
             android:layout_width="481dp"
             android:layout_height="36dp"
             android:layout_marginTop="16dp"
@@ -157,17 +157,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mapLayout">
+            app:layout_constraintTop_toBottomOf="@id/mapLayout">
 
             <TextView
-                android:id="@+id/pcHP"
+                android:id="@id/pcHP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView" />
 
             <ProgressBar
-                android:id="@+id/pcHPBar"
+                android:id="@id/pcHPBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -180,7 +180,7 @@
                 android:layout_weight="1" />
 
             <ProgressBar
-                android:id="@+id/enemyHPBar"
+                android:id="@id/enemyHPBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -188,7 +188,7 @@
                 android:progressTint="#B32323" />
 
             <TextView
-                android:id="@+id/enemyHP"
+                android:id="@id/enemyHP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -196,7 +196,7 @@
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/combatButtons"
+            android:id="@id/combatButtons"
             android:layout_width="198dp"
             android:layout_height="57dp"
             android:layout_marginTop="8dp"
@@ -204,19 +204,19 @@
             android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/combatLog">
+            app:layout_constraintTop_toBottomOf="@id/combatLog">
 
             <Button
-                android:id="@+id/fightButton"
+                android:id="@id/fightButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:text="FIGHT"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/blockButton" />
+                app:layout_constraintEnd_toStartOf="@id/blockButton" />
 
             <Button
-                android:id="@+id/blockButton"
+                android:id="@id/blockButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -226,7 +226,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/locationField"
+            android:id="@id/locationField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -234,13 +234,13 @@
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/mapLayout"
+            app:layout_constraintBottom_toTopOf="@id/mapLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/stairsButton"
+            android:id="@id/stairsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -251,7 +251,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TableLayout
-            android:id="@+id/mapLayout"
+            android:id="@id/mapLayout"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="144dp"
